[package]
name = "mouse-tremor-stop"
version = "0.1.0"
edition = "2021"

[dependencies]
device_query = "1.1.3"  # For mouse input
enigo = "0.1.3"         # For mouse control
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"          # For error handling
eframe = "0.19.0"       # For GUI
egui = "0.19.0"         # For GUI
ringbuf = "0.3.2"       # For circular buffer
winapi = { version = "0.3.9", features = ["winuser"] } 